--- a/shortsym.sty
+++ b/shortsym.sty
@@ -154,135 +154,135 @@
 \newcommand{\Jeight}{\mathit{8}}
 \newcommand{\Jnine }{\mathit{9}}
 % Upright bold letters
-\newcommand{\BA}{\bm{\mathrm{A}}}
-\newcommand{\BB}{\bm{\mathrm{B}}}
-\newcommand{\BC}{\bm{\mathrm{C}}}
-\newcommand{\BD}{\bm{\mathrm{D}}}
-\newcommand{\BE}{\bm{\mathrm{E}}}
-\newcommand{\BF}{\bm{\mathrm{F}}}
-\newcommand{\BG}{\bm{\mathrm{G}}}
-\newcommand{\BH}{\bm{\mathrm{H}}}
-\newcommand{\BI}{\bm{\mathrm{I}}}
-\newcommand{\BJ}{\bm{\mathrm{J}}}
-\newcommand{\BK}{\bm{\mathrm{K}}}
-\newcommand{\BL}{\bm{\mathrm{L}}}
-\newcommand{\BM}{\bm{\mathrm{M}}}
-\newcommand{\BN}{\bm{\mathrm{N}}}
-\newcommand{\BO}{\bm{\mathrm{O}}}
-\newcommand{\BP}{\bm{\mathrm{P}}}
-\newcommand{\BQ}{\bm{\mathrm{Q}}}
-\newcommand{\BR}{\bm{\mathrm{R}}}
-\newcommand{\BS}{\bm{\mathrm{S}}}
-\newcommand{\BT}{\bm{\mathrm{T}}}
-\newcommand{\BU}{\bm{\mathrm{U}}}
-\newcommand{\BV}{\bm{\mathrm{V}}}
-\newcommand{\BW}{\bm{\mathrm{W}}}
-\newcommand{\BX}{\bm{\mathrm{X}}}
-\newcommand{\BY}{\bm{\mathrm{Y}}}
-\newcommand{\BZ}{\bm{\mathrm{Z}}}
-\newcommand{\Ba}{\bm{\mathrm{a}}}
-\newcommand{\Bb}{\bm{\mathrm{b}}}
-\newcommand{\Bc}{\bm{\mathrm{c}}}
-\newcommand{\Bd}{\bm{\mathrm{d}}}
-\newcommand{\Be}{\bm{\mathrm{e}}}
-\newcommand{\Bf}{\bm{\mathrm{f}}}
-\newcommand{\Bg}{\bm{\mathrm{g}}}
-\newcommand{\Bh}{\bm{\mathrm{h}}}
-\newcommand{\Bi}{\bm{\mathrm{i}}}
-\newcommand{\Bj}{\bm{\mathrm{j}}}
-\newcommand{\Bk}{\bm{\mathrm{k}}}
-\newcommand{\Bl}{\bm{\mathrm{l}}}
-\newcommand{\Bm}{\bm{\mathrm{m}}}
-\newcommand{\Bn}{\bm{\mathrm{n}}}
-\newcommand{\Bo}{\bm{\mathrm{o}}}
-\newcommand{\Bp}{\bm{\mathrm{p}}}
-\newcommand{\Bq}{\bm{\mathrm{q}}}
-\newcommand{\Br}{\bm{\mathrm{r}}}
-\newcommand{\Bs}{\bm{\mathrm{s}}}
-\newcommand{\Bt}{\bm{\mathrm{t}}}
-\newcommand{\Bu}{\bm{\mathrm{u}}}
-\newcommand{\Bv}{\bm{\mathrm{v}}}
-\newcommand{\Bw}{\bm{\mathrm{w}}}
-\newcommand{\Bx}{\bm{\mathrm{x}}}
-\newcommand{\By}{\bm{\mathrm{y}}}
-\newcommand{\Bz}{\bm{\mathrm{z}}}
+\newcommand{\BA}{{\bm{\mathrm{A}}}}
+\newcommand{\BB}{{\bm{\mathrm{B}}}}
+\newcommand{\BC}{{\bm{\mathrm{C}}}}
+\newcommand{\BD}{{\bm{\mathrm{D}}}}
+\newcommand{\BE}{{\bm{\mathrm{E}}}}
+\newcommand{\BF}{{\bm{\mathrm{F}}}}
+\newcommand{\BG}{{\bm{\mathrm{G}}}}
+\newcommand{\BH}{{\bm{\mathrm{H}}}}
+\newcommand{\BI}{{\bm{\mathrm{I}}}}
+\newcommand{\BJ}{{\bm{\mathrm{J}}}}
+\newcommand{\BK}{{\bm{\mathrm{K}}}}
+\newcommand{\BL}{{\bm{\mathrm{L}}}}
+\newcommand{\BM}{{\bm{\mathrm{M}}}}
+\newcommand{\BN}{{\bm{\mathrm{N}}}}
+\newcommand{\BO}{{\bm{\mathrm{O}}}}
+\newcommand{\BP}{{\bm{\mathrm{P}}}}
+\newcommand{\BQ}{{\bm{\mathrm{Q}}}}
+\newcommand{\BR}{{\bm{\mathrm{R}}}}
+\newcommand{\BS}{{\bm{\mathrm{S}}}}
+\newcommand{\BT}{{\bm{\mathrm{T}}}}
+\newcommand{\BU}{{\bm{\mathrm{U}}}}
+\newcommand{\BV}{{\bm{\mathrm{V}}}}
+\newcommand{\BW}{{\bm{\mathrm{W}}}}
+\newcommand{\BX}{{\bm{\mathrm{X}}}}
+\newcommand{\BY}{{\bm{\mathrm{Y}}}}
+\newcommand{\BZ}{{\bm{\mathrm{Z}}}}
+\newcommand{\Ba}{{\bm{\mathrm{a}}}}
+\newcommand{\Bb}{{\bm{\mathrm{b}}}}
+\newcommand{\Bc}{{\bm{\mathrm{c}}}}
+\newcommand{\Bd}{{\bm{\mathrm{d}}}}
+\newcommand{\Be}{{\bm{\mathrm{e}}}}
+\newcommand{\Bf}{{\bm{\mathrm{f}}}}
+\newcommand{\Bg}{{\bm{\mathrm{g}}}}
+\newcommand{\Bh}{{\bm{\mathrm{h}}}}
+\newcommand{\Bi}{{\bm{\mathrm{i}}}}
+\newcommand{\Bj}{{\bm{\mathrm{j}}}}
+\newcommand{\Bk}{{\bm{\mathrm{k}}}}
+\newcommand{\Bl}{{\bm{\mathrm{l}}}}
+\newcommand{\Bm}{{\bm{\mathrm{m}}}}
+\newcommand{\Bn}{{\bm{\mathrm{n}}}}
+\newcommand{\Bo}{{\bm{\mathrm{o}}}}
+\newcommand{\Bp}{{\bm{\mathrm{p}}}}
+\newcommand{\Bq}{{\bm{\mathrm{q}}}}
+\newcommand{\Br}{{\bm{\mathrm{r}}}}
+\newcommand{\Bs}{{\bm{\mathrm{s}}}}
+\newcommand{\Bt}{{\bm{\mathrm{t}}}}
+\newcommand{\Bu}{{\bm{\mathrm{u}}}}
+\newcommand{\Bv}{{\bm{\mathrm{v}}}}
+\newcommand{\Bw}{{\bm{\mathrm{w}}}}
+\newcommand{\Bx}{{\bm{\mathrm{x}}}}
+\newcommand{\By}{{\bm{\mathrm{y}}}}
+\newcommand{\Bz}{{\bm{\mathrm{z}}}}
 
 % bold upright numbers
-\newcommand{\Bzero }{\bm{\mathrm{0}}}
-\newcommand{\Bone  }{\bm{\mathrm{1}}}
-\newcommand{\Btwo  }{\bm{\mathrm{2}}}
-\newcommand{\Bthree}{\bm{\mathrm{3}}}
-\newcommand{\Bfour }{\bm{\mathrm{4}}}
-\newcommand{\Bfive }{\bm{\mathrm{5}}}
-\newcommand{\Bsix  }{\bm{\mathrm{6}}}
-\newcommand{\Bseven}{\bm{\mathrm{7}}}
-\newcommand{\Beight}{\bm{\mathrm{8}}}
-\newcommand{\Bnine }{\bm{\mathrm{9}}}
+\newcommand{\Bzero }{{\bm{\mathrm{0}}}}
+\newcommand{\Bone  }{{\bm{\mathrm{1}}}}
+\newcommand{\Btwo  }{{\bm{\mathrm{2}}}}
+\newcommand{\Bthree}{{\bm{\mathrm{3}}}}
+\newcommand{\Bfour }{{\bm{\mathrm{4}}}}
+\newcommand{\Bfive }{{\bm{\mathrm{5}}}}
+\newcommand{\Bsix  }{{\bm{\mathrm{6}}}}
+\newcommand{\Bseven}{{\bm{\mathrm{7}}}}
+\newcommand{\Beight}{{\bm{\mathrm{8}}}}
+\newcommand{\Bnine }{{\bm{\mathrm{9}}}}
 % Upright bold letters
-\newcommand{\VA}{\bm{\mathrm{A}}}
-\newcommand{\VB}{\bm{\mathrm{B}}}
-\newcommand{\VC}{\bm{\mathrm{C}}}
-\newcommand{\VD}{\bm{\mathrm{D}}}
-\newcommand{\VE}{\bm{\mathrm{E}}}
-\newcommand{\VF}{\bm{\mathrm{F}}}
-\newcommand{\VG}{\bm{\mathrm{G}}}
-\newcommand{\VH}{\bm{\mathrm{H}}}
-\newcommand{\VI}{\bm{\mathrm{I}}}
-\newcommand{\VJ}{\bm{\mathrm{J}}}
-\newcommand{\VK}{\bm{\mathrm{K}}}
-\newcommand{\VL}{\bm{\mathrm{L}}}
-\newcommand{\VM}{\bm{\mathrm{M}}}
-\newcommand{\VN}{\bm{\mathrm{N}}}
-\newcommand{\VO}{\bm{\mathrm{O}}}
-\newcommand{\VP}{\bm{\mathrm{P}}}
-\newcommand{\VQ}{\bm{\mathrm{Q}}}
-\newcommand{\VR}{\bm{\mathrm{R}}}
-\newcommand{\VS}{\bm{\mathrm{S}}}
-\newcommand{\VT}{\bm{\mathrm{T}}}
-\newcommand{\VU}{\bm{\mathrm{U}}}
-\newcommand{\VV}{\bm{\mathrm{V}}}
-\newcommand{\VW}{\bm{\mathrm{W}}}
-\newcommand{\VX}{\bm{\mathrm{X}}}
-\newcommand{\VY}{\bm{\mathrm{Y}}}
-\newcommand{\VZ}{\bm{\mathrm{Z}}}
-\newcommand{\Va}{\bm{\mathrm{a}}}
-\newcommand{\Vb}{\bm{\mathrm{b}}}
-\newcommand{\Vc}{\bm{\mathrm{c}}}
-\newcommand{\Vd}{\bm{\mathrm{d}}}
-\newcommand{\Ve}{\bm{\mathrm{e}}}
-\newcommand{\Vf}{\bm{\mathrm{f}}}
-\newcommand{\Vg}{\bm{\mathrm{g}}}
-\newcommand{\Vh}{\bm{\mathrm{h}}}
-\newcommand{\Vi}{\bm{\mathrm{i}}}
-\newcommand{\Vj}{\bm{\mathrm{j}}}
-\newcommand{\Vk}{\bm{\mathrm{k}}}
-\newcommand{\Vl}{\bm{\mathrm{l}}}
-\newcommand{\Vm}{\bm{\mathrm{m}}}
-\newcommand{\Vn}{\bm{\mathrm{n}}}
-\newcommand{\Vo}{\bm{\mathrm{o}}}
-\newcommand{\Vp}{\bm{\mathrm{p}}}
-\newcommand{\Vq}{\bm{\mathrm{q}}}
-\newcommand{\Vr}{\bm{\mathrm{r}}}
-\newcommand{\Vs}{\bm{\mathrm{s}}}
-\newcommand{\Vt}{\bm{\mathrm{t}}}
-\newcommand{\Vu}{\bm{\mathrm{u}}}
-\newcommand{\Vv}{\bm{\mathrm{v}}}
-\newcommand{\Vw}{\bm{\mathrm{w}}}
-\newcommand{\Vx}{\bm{\mathrm{x}}}
-\newcommand{\Vy}{\bm{\mathrm{y}}}
-\newcommand{\Vz}{\bm{\mathrm{z}}}
+\newcommand{\VA}{{\bm{\mathrm{A}}}}
+\newcommand{\VB}{{\bm{\mathrm{B}}}}
+\newcommand{\VC}{{\bm{\mathrm{C}}}}
+\newcommand{\VD}{{\bm{\mathrm{D}}}}
+\newcommand{\VE}{{\bm{\mathrm{E}}}}
+\newcommand{\VF}{{\bm{\mathrm{F}}}}
+\newcommand{\VG}{{\bm{\mathrm{G}}}}
+\newcommand{\VH}{{\bm{\mathrm{H}}}}
+\newcommand{\VI}{{\bm{\mathrm{I}}}}
+\newcommand{\VJ}{{\bm{\mathrm{J}}}}
+\newcommand{\VK}{{\bm{\mathrm{K}}}}
+\newcommand{\VL}{{\bm{\mathrm{L}}}}
+\newcommand{\VM}{{\bm{\mathrm{M}}}}
+\newcommand{\VN}{{\bm{\mathrm{N}}}}
+\newcommand{\VO}{{\bm{\mathrm{O}}}}
+\newcommand{\VP}{{\bm{\mathrm{P}}}}
+\newcommand{\VQ}{{\bm{\mathrm{Q}}}}
+\newcommand{\VR}{{\bm{\mathrm{R}}}}
+\newcommand{\VS}{{\bm{\mathrm{S}}}}
+\newcommand{\VT}{{\bm{\mathrm{T}}}}
+\newcommand{\VU}{{\bm{\mathrm{U}}}}
+\newcommand{\VV}{{\bm{\mathrm{V}}}}
+\newcommand{\VW}{{\bm{\mathrm{W}}}}
+\newcommand{\VX}{{\bm{\mathrm{X}}}}
+\newcommand{\VY}{{\bm{\mathrm{Y}}}}
+\newcommand{\VZ}{{\bm{\mathrm{Z}}}}
+\newcommand{\Va}{{\bm{\mathrm{a}}}}
+\newcommand{\Vb}{{\bm{\mathrm{b}}}}
+\newcommand{\Vc}{{\bm{\mathrm{c}}}}
+\newcommand{\Vd}{{\bm{\mathrm{d}}}}
+\newcommand{\Ve}{{\bm{\mathrm{e}}}}
+\newcommand{\Vf}{{\bm{\mathrm{f}}}}
+\newcommand{\Vg}{{\bm{\mathrm{g}}}}
+\newcommand{\Vh}{{\bm{\mathrm{h}}}}
+\newcommand{\Vi}{{\bm{\mathrm{i}}}}
+\newcommand{\Vj}{{\bm{\mathrm{j}}}}
+\newcommand{\Vk}{{\bm{\mathrm{k}}}}
+\newcommand{\Vl}{{\bm{\mathrm{l}}}}
+\newcommand{\Vm}{{\bm{\mathrm{m}}}}
+\newcommand{\Vn}{{\bm{\mathrm{n}}}}
+\newcommand{\Vo}{{\bm{\mathrm{o}}}}
+\newcommand{\Vp}{{\bm{\mathrm{p}}}}
+\newcommand{\Vq}{{\bm{\mathrm{q}}}}
+\newcommand{\Vr}{{\bm{\mathrm{r}}}}
+\newcommand{\Vs}{{\bm{\mathrm{s}}}}
+\newcommand{\Vt}{{\bm{\mathrm{t}}}}
+\newcommand{\Vu}{{\bm{\mathrm{u}}}}
+\newcommand{\Vv}{{\bm{\mathrm{v}}}}
+\newcommand{\Vw}{{\bm{\mathrm{w}}}}
+\newcommand{\Vx}{{\bm{\mathrm{x}}}}
+\newcommand{\Vy}{{\bm{\mathrm{y}}}}
+\newcommand{\Vz}{{\bm{\mathrm{z}}}}
 
 % bold upright numbers
-\newcommand{\Vzero }{\bm{\mathrm{0}}}
-\newcommand{\Vone  }{\bm{\mathrm{1}}}
-\newcommand{\Vtwo  }{\bm{\mathrm{2}}}
-\newcommand{\Vthree}{\bm{\mathrm{3}}}
-\newcommand{\Vfour }{\bm{\mathrm{4}}}
-\newcommand{\Vfive }{\bm{\mathrm{5}}}
-\newcommand{\Vsix  }{\bm{\mathrm{6}}}
-\newcommand{\Vseven}{\bm{\mathrm{7}}}
-\newcommand{\Veight}{\bm{\mathrm{8}}}
-\newcommand{\Vnine }{\bm{\mathrm{9}}}
+\newcommand{\Vzero }{{\bm{\mathrm{0}}}}
+\newcommand{\Vone  }{{\bm{\mathrm{1}}}}
+\newcommand{\Vtwo  }{{\bm{\mathrm{2}}}}
+\newcommand{\Vthree}{{\bm{\mathrm{3}}}}
+\newcommand{\Vfour }{{\bm{\mathrm{4}}}}
+\newcommand{\Vfive }{{\bm{\mathrm{5}}}}
+\newcommand{\Vsix  }{{\bm{\mathrm{6}}}}
+\newcommand{\Vseven}{{\bm{\mathrm{7}}}}
+\newcommand{\Veight}{{\bm{\mathrm{8}}}}
+\newcommand{\Vnine }{{\bm{\mathrm{9}}}}
 % AMS blackboard bold
 \newcommand{\IA}{\mathbb{A}}
 \newcommand{\IB}{\mathbb{B}}
@@ -390,69 +390,69 @@
 % Bold Sans-serif
 % \DeclareMathAlphabet{\mathbfsf}{\encodingdefault}{\sfdefault}{bx}{n}
 
-\newcommand{\BFA}{\bm{\mathsf{A}}}
-\newcommand{\BFB}{\bm{\mathsf{B}}}
-\newcommand{\BFC}{\bm{\mathsf{C}}}
-\newcommand{\BFD}{\bm{\mathsf{D}}}
-\newcommand{\BFE}{\bm{\mathsf{E}}}
-\newcommand{\BFF}{\bm{\mathsf{F}}}
-\newcommand{\BFG}{\bm{\mathsf{G}}}
-\newcommand{\BFH}{\bm{\mathsf{H}}}
-\newcommand{\BFI}{\bm{\mathsf{I}}}
-\newcommand{\BFJ}{\bm{\mathsf{J}}}
-\newcommand{\BFK}{\bm{\mathsf{K}}}
-\newcommand{\BFL}{\bm{\mathsf{L}}}
-\newcommand{\BFM}{\bm{\mathsf{M}}}
-\newcommand{\BFN}{\bm{\mathsf{N}}}
-\newcommand{\BFO}{\bm{\mathsf{O}}}
-\newcommand{\BFP}{\bm{\mathsf{P}}}
-\newcommand{\BFQ}{\bm{\mathsf{Q}}}
-\newcommand{\BFR}{\bm{\mathsf{R}}}
-\newcommand{\BFS}{\bm{\mathsf{S}}}
-\newcommand{\BFT}{\bm{\mathsf{T}}}
-\newcommand{\BFU}{\bm{\mathsf{U}}}
-\newcommand{\BFV}{\bm{\mathsf{V}}}
-\newcommand{\BFW}{\bm{\mathsf{W}}}
-\newcommand{\BFX}{\bm{\mathsf{X}}}
-\newcommand{\BFY}{\bm{\mathsf{Y}}}
-\newcommand{\BFZ}{\bm{\mathsf{Z}}}
-\newcommand{\BFa}{\bm{\mathsf{a}}}
-\newcommand{\BFb}{\bm{\mathsf{b}}}
-\newcommand{\BFc}{\bm{\mathsf{c}}}
-\newcommand{\BFd}{\bm{\mathsf{d}}}
-\newcommand{\BFe}{\bm{\mathsf{e}}}
-\newcommand{\BFf}{\bm{\mathsf{f}}}
-\newcommand{\BFg}{\bm{\mathsf{g}}}
-\newcommand{\BFh}{\bm{\mathsf{h}}}
-\newcommand{\BFi}{\bm{\mathsf{i}}}
-\newcommand{\BFj}{\bm{\mathsf{j}}}
-\newcommand{\BFk}{\bm{\mathsf{k}}}
-\newcommand{\BFl}{\bm{\mathsf{l}}}
-\newcommand{\BFm}{\bm{\mathsf{m}}}
-\newcommand{\BFn}{\bm{\mathsf{n}}}
-\newcommand{\BFo}{\bm{\mathsf{o}}}
-\newcommand{\BFp}{\bm{\mathsf{p}}}
-\newcommand{\BFq}{\bm{\mathsf{q}}}
-\newcommand{\BFr}{\bm{\mathsf{r}}}
-\newcommand{\BFs}{\bm{\mathsf{s}}}
-\newcommand{\BFt}{\bm{\mathsf{t}}}
-\newcommand{\BFu}{\bm{\mathsf{u}}}
-\newcommand{\BFv}{\bm{\mathsf{v}}}
-\newcommand{\BFw}{\bm{\mathsf{w}}}
-\newcommand{\BFx}{\bm{\mathsf{x}}}
-\newcommand{\BFy}{\bm{\mathsf{y}}}
-\newcommand{\BFz}{\bm{\mathsf{z}}}
+\newcommand{\BFA}{{\bm{\mathsf{A}}}}
+\newcommand{\BFB}{{\bm{\mathsf{B}}}}
+\newcommand{\BFC}{{\bm{\mathsf{C}}}}
+\newcommand{\BFD}{{\bm{\mathsf{D}}}}
+\newcommand{\BFE}{{\bm{\mathsf{E}}}}
+\newcommand{\BFF}{{\bm{\mathsf{F}}}}
+\newcommand{\BFG}{{\bm{\mathsf{G}}}}
+\newcommand{\BFH}{{\bm{\mathsf{H}}}}
+\newcommand{\BFI}{{\bm{\mathsf{I}}}}
+\newcommand{\BFJ}{{\bm{\mathsf{J}}}}
+\newcommand{\BFK}{{\bm{\mathsf{K}}}}
+\newcommand{\BFL}{{\bm{\mathsf{L}}}}
+\newcommand{\BFM}{{\bm{\mathsf{M}}}}
+\newcommand{\BFN}{{\bm{\mathsf{N}}}}
+\newcommand{\BFO}{{\bm{\mathsf{O}}}}
+\newcommand{\BFP}{{\bm{\mathsf{P}}}}
+\newcommand{\BFQ}{{\bm{\mathsf{Q}}}}
+\newcommand{\BFR}{{\bm{\mathsf{R}}}}
+\newcommand{\BFS}{{\bm{\mathsf{S}}}}
+\newcommand{\BFT}{{\bm{\mathsf{T}}}}
+\newcommand{\BFU}{{\bm{\mathsf{U}}}}
+\newcommand{\BFV}{{\bm{\mathsf{V}}}}
+\newcommand{\BFW}{{\bm{\mathsf{W}}}}
+\newcommand{\BFX}{{\bm{\mathsf{X}}}}
+\newcommand{\BFY}{{\bm{\mathsf{Y}}}}
+\newcommand{\BFZ}{{\bm{\mathsf{Z}}}}
+\newcommand{\BFa}{{\bm{\mathsf{a}}}}
+\newcommand{\BFb}{{\bm{\mathsf{b}}}}
+\newcommand{\BFc}{{\bm{\mathsf{c}}}}
+\newcommand{\BFd}{{\bm{\mathsf{d}}}}
+\newcommand{\BFe}{{\bm{\mathsf{e}}}}
+\newcommand{\BFf}{{\bm{\mathsf{f}}}}
+\newcommand{\BFg}{{\bm{\mathsf{g}}}}
+\newcommand{\BFh}{{\bm{\mathsf{h}}}}
+\newcommand{\BFi}{{\bm{\mathsf{i}}}}
+\newcommand{\BFj}{{\bm{\mathsf{j}}}}
+\newcommand{\BFk}{{\bm{\mathsf{k}}}}
+\newcommand{\BFl}{{\bm{\mathsf{l}}}}
+\newcommand{\BFm}{{\bm{\mathsf{m}}}}
+\newcommand{\BFn}{{\bm{\mathsf{n}}}}
+\newcommand{\BFo}{{\bm{\mathsf{o}}}}
+\newcommand{\BFp}{{\bm{\mathsf{p}}}}
+\newcommand{\BFq}{{\bm{\mathsf{q}}}}
+\newcommand{\BFr}{{\bm{\mathsf{r}}}}
+\newcommand{\BFs}{{\bm{\mathsf{s}}}}
+\newcommand{\BFt}{{\bm{\mathsf{t}}}}
+\newcommand{\BFu}{{\bm{\mathsf{u}}}}
+\newcommand{\BFv}{{\bm{\mathsf{v}}}}
+\newcommand{\BFw}{{\bm{\mathsf{w}}}}
+\newcommand{\BFx}{{\bm{\mathsf{x}}}}
+\newcommand{\BFy}{{\bm{\mathsf{y}}}}
+\newcommand{\BFz}{{\bm{\mathsf{z}}}}
 
-\newcommand{\BFzero }{\bm{\mathsf{0}}}
-\newcommand{\BFone  }{\bm{\mathsf{1}}}
-\newcommand{\BFtwo  }{\bm{\mathsf{2}}}
-\newcommand{\BFthree}{\bm{\mathsf{3}}}
-\newcommand{\BFfour }{\bm{\mathsf{4}}}
-\newcommand{\BFfive }{\bm{\mathsf{5}}}
-\newcommand{\BFsix  }{\bm{\mathsf{6}}}
-\newcommand{\BFseven}{\bm{\mathsf{7}}}
-\newcommand{\BFeight}{\bm{\mathsf{8}}}
-\newcommand{\BFnine }{\bm{\mathsf{9}}}
+\newcommand{\BFzero }{{\bm{\mathsf{0}}}}
+\newcommand{\BFone  }{{\bm{\mathsf{1}}}}
+\newcommand{\BFtwo  }{{\bm{\mathsf{2}}}}
+\newcommand{\BFthree}{{\bm{\mathsf{3}}}}
+\newcommand{\BFfour }{{\bm{\mathsf{4}}}}
+\newcommand{\BFfive }{{\bm{\mathsf{5}}}}
+\newcommand{\BFsix  }{{\bm{\mathsf{6}}}}
+\newcommand{\BFseven}{{\bm{\mathsf{7}}}}
+\newcommand{\BFeight}{{\bm{\mathsf{8}}}}
+\newcommand{\BFnine }{{\bm{\mathsf{9}}}}
 
 % Calligraphic
 \newcommand{\CA}{\mathcal{A}}
@@ -482,32 +482,32 @@
 \newcommand{\CY}{\mathcal{Y}}
 \newcommand{\CZ}{\mathcal{Z}}
 % Calligraphic bold
-\newcommand{\BCA}{\bm{\mathcal{A}}}
-\newcommand{\BCB}{\bm{\mathcal{B}}}
-\newcommand{\BCC}{\bm{\mathcal{C}}}
-\newcommand{\BCD}{\bm{\mathcal{D}}}
-\newcommand{\BCE}{\bm{\mathcal{E}}}
-\newcommand{\BCF}{\bm{\mathcal{F}}}
-\newcommand{\BCG}{\bm{\mathcal{G}}}
-\newcommand{\BCH}{\bm{\mathcal{H}}}
-\newcommand{\BCI}{\bm{\mathcal{I}}}
-\newcommand{\BCJ}{\bm{\mathcal{J}}}
-\newcommand{\BCK}{\bm{\mathcal{K}}}
-\newcommand{\BCL}{\bm{\mathcal{L}}}
-\newcommand{\BCM}{\bm{\mathcal{M}}}
-\newcommand{\BCN}{\bm{\mathcal{N}}}
-\newcommand{\BCO}{\bm{\mathcal{O}}}
-\newcommand{\BCP}{\bm{\mathcal{P}}}
-\newcommand{\BCQ}{\bm{\mathcal{Q}}}
-\newcommand{\BCR}{\bm{\mathcal{R}}}
-\newcommand{\BCS}{\bm{\mathcal{S}}}
-\newcommand{\BCT}{\bm{\mathcal{T}}}
-\newcommand{\BCU}{\bm{\mathcal{U}}}
-\newcommand{\BCV}{\bm{\mathcal{V}}}
-\newcommand{\BCW}{\bm{\mathcal{W}}}
-\newcommand{\BCX}{\bm{\mathcal{X}}}
-\newcommand{\BCY}{\bm{\mathcal{Y}}}
-\newcommand{\BCZ}{\bm{\mathcal{Z}}}
+\newcommand{\BCA}{{\bm{\mathcal{A}}}}
+\newcommand{\BCB}{{\bm{\mathcal{B}}}}
+\newcommand{\BCC}{{\bm{\mathcal{C}}}}
+\newcommand{\BCD}{{\bm{\mathcal{D}}}}
+\newcommand{\BCE}{{\bm{\mathcal{E}}}}
+\newcommand{\BCF}{{\bm{\mathcal{F}}}}
+\newcommand{\BCG}{{\bm{\mathcal{G}}}}
+\newcommand{\BCH}{{\bm{\mathcal{H}}}}
+\newcommand{\BCI}{{\bm{\mathcal{I}}}}
+\newcommand{\BCJ}{{\bm{\mathcal{J}}}}
+\newcommand{\BCK}{{\bm{\mathcal{K}}}}
+\newcommand{\BCL}{{\bm{\mathcal{L}}}}
+\newcommand{\BCM}{{\bm{\mathcal{M}}}}
+\newcommand{\BCN}{{\bm{\mathcal{N}}}}
+\newcommand{\BCO}{{\bm{\mathcal{O}}}}
+\newcommand{\BCP}{{\bm{\mathcal{P}}}}
+\newcommand{\BCQ}{{\bm{\mathcal{Q}}}}
+\newcommand{\BCR}{{\bm{\mathcal{R}}}}
+\newcommand{\BCS}{{\bm{\mathcal{S}}}}
+\newcommand{\BCT}{{\bm{\mathcal{T}}}}
+\newcommand{\BCU}{{\bm{\mathcal{U}}}}
+\newcommand{\BCV}{{\bm{\mathcal{V}}}}
+\newcommand{\BCW}{{\bm{\mathcal{W}}}}
+\newcommand{\BCX}{{\bm{\mathcal{X}}}}
+\newcommand{\BCY}{{\bm{\mathcal{Y}}}}
+\newcommand{\BCZ}{{\bm{\mathcal{Z}}}}
 % bbm blackboard bold serif
 % \DeclareMathAlphabet{\bbmbboldserif}{U}{bbm}{m}{n}
 \newcommand{\bBA}{\mathbbm{A}}
@@ -882,43 +882,43 @@
 \newcommand{\Bfreight}{\bm{\mathfrak{8}}}
 \newcommand{\Bfrnine }{\bm{\mathfrak{9}}}
 % Bold Greek
-\newcommand{\Balpha  }{\bm{\alpha}        }
-\newcommand{\Bbeta   }{\bm{\beta}         }
-\newcommand{\Bgamma  }{\bm{\gamma}        }
-\newcommand{\Bdelta  }{\bm{\delta}        }
-\newcommand{\Bepsilon}{\bm{\epsilon}      }
-\newcommand{\Bvareps }{\bm{\varepsilon}   }
-\newcommand{\Bvarepsilon}{\bm{\varepsilon}}
-\newcommand{\Bzeta   }{\bm{\zeta}         }
-\newcommand{\Beta    }{\bm{\eta}          }
-\newcommand{\Btheta  }{\bm{\theta}        }
-\newcommand{\Bvarthe }{\bm{\vartheta}     }
-\newcommand{\Biota   }{\bm{\iota}         }
-\newcommand{\Bkappa  }{\bm{\kappa}        }
-\newcommand{\Blambda }{\bm{\lambda}       }
-\newcommand{\Bmu     }{\bm{\mu}           }
-\newcommand{\Bnu     }{\bm{\nu}           }
-\newcommand{\Bxi     }{\bm{\xi}           }
-\newcommand{\Bpi     }{\bm{\pi}           }
-\newcommand{\Brho    }{\bm{\rho}          }
-\newcommand{\Bvrho   }{\bm{\varrho}       }
-\newcommand{\Bsigma  }{\bm{\sigma}        }
-\newcommand{\Bvsigma }{\bm{\varsigma}     }
-\newcommand{\Btau    }{\bm{\tau}          }
-\newcommand{\Bupsilon}{\bm{\upsilon}      }
-\newcommand{\Bphi    }{\bm{\phi}          }
-\newcommand{\Bvarphi }{\bm{\varphi}       }
-\newcommand{\Bchi    }{\bm{\chi}          }
-\newcommand{\Bpsi    }{\bm{\psi}          }
-\newcommand{\Bomega  }{\bm{\omega}        }
-\newcommand{\BGamma  }{\bm{\Gamma}        }
-\newcommand{\BDelta  }{\bm{\Delta}        }
-\newcommand{\BTheta  }{\bm{\Theta}        }
-\newcommand{\BLambda }{\bm{\Lambda}       }
-\newcommand{\BXi     }{\bm{\Xi}           }
-\newcommand{\BPi     }{\bm{\Pi}           }
-\newcommand{\BSigma  }{\bm{\Sigma}        }
-\newcommand{\BUpsilon}{\bm{\Upsilon}      }
-\newcommand{\BPhi    }{\bm{\Phi}          }
-\newcommand{\BPsi    }{\bm{\Psi}          }
-\newcommand{\BOmega  }{\bm{\Omega}        }
+\newcommand{\Balpha  }{{\bm{\alpha}        }}
+\newcommand{\Bbeta   }{{\bm{\beta}         }}
+\newcommand{\Bgamma  }{{\bm{\gamma}        }}
+\newcommand{\Bdelta  }{{\bm{\delta}        }}
+\newcommand{\Bepsilon}{{\bm{\epsilon}      }}
+\newcommand{\Bvareps }{{\bm{\varepsilon}   }}
+\newcommand{\Bvarepsilon}{{\bm{\varepsilon}}}
+\newcommand{\Bzeta   }{{\bm{\zeta}         }}
+\newcommand{\Beta    }{{\bm{\eta}          }}
+\newcommand{\Btheta  }{{\bm{\theta}        }}
+\newcommand{\Bvarthe }{{\bm{\vartheta}     }}
+\newcommand{\Biota   }{{\bm{\iota}         }}
+\newcommand{\Bkappa  }{{\bm{\kappa}        }}
+\newcommand{\Blambda }{{\bm{\lambda}       }}
+\newcommand{\Bmu     }{{\bm{\mu}           }}
+\newcommand{\Bnu     }{{\bm{\nu}           }}
+\newcommand{\Bxi     }{{\bm{\xi}           }}
+\newcommand{\Bpi     }{{\bm{\pi}           }}
+\newcommand{\Brho    }{{\bm{\rho}          }}
+\newcommand{\Bvrho   }{{\bm{\varrho}       }}
+\newcommand{\Bsigma  }{{\bm{\sigma}        }}
+\newcommand{\Bvsigma }{{\bm{\varsigma}     }}
+\newcommand{\Btau    }{{\bm{\tau}          }}
+\newcommand{\Bupsilon}{{\bm{\upsilon}      }}
+\newcommand{\Bphi    }{{\bm{\phi}          }}
+\newcommand{\Bvarphi }{{\bm{\varphi}       }}
+\newcommand{\Bchi    }{{\bm{\chi}          }}
+\newcommand{\Bpsi    }{{\bm{\psi}          }}
+\newcommand{\Bomega  }{{\bm{\omega}        }}
+\newcommand{\BGamma  }{{\bm{\Gamma}        }}
+\newcommand{\BDelta  }{{\bm{\Delta}        }}
+\newcommand{\BTheta  }{{\bm{\Theta}        }}
+\newcommand{\BLambda }{{\bm{\Lambda}       }}
+\newcommand{\BXi     }{{\bm{\Xi}           }}
+\newcommand{\BPi     }{{\bm{\Pi}           }}
+\newcommand{\BSigma  }{{\bm{\Sigma}        }}
+\newcommand{\BUpsilon}{{\bm{\Upsilon}      }}
+\newcommand{\BPhi    }{{\bm{\Phi}          }}
+\newcommand{\BPsi    }{{\bm{\Psi}          }}
+\newcommand{\BOmega  }{{\bm{\Omega}        }}
