--- a/shortsym_bold.sty
+++ b/shortsym_bold.sty
@@ -1,65 +1,65 @@
 % Upright bold letters
-\newcommand{\BA}{\bm{\mathrm{A}}}
-\newcommand{\BB}{\bm{\mathrm{B}}}
-\newcommand{\BC}{\bm{\mathrm{C}}}
-\newcommand{\BD}{\bm{\mathrm{D}}}
-\newcommand{\BE}{\bm{\mathrm{E}}}
-\newcommand{\BF}{\bm{\mathrm{F}}}
-\newcommand{\BG}{\bm{\mathrm{G}}}
-\newcommand{\BH}{\bm{\mathrm{H}}}
-\newcommand{\BI}{\bm{\mathrm{I}}}
-\newcommand{\BJ}{\bm{\mathrm{J}}}
-\newcommand{\BK}{\bm{\mathrm{K}}}
-\newcommand{\BL}{\bm{\mathrm{L}}}
-\newcommand{\BM}{\bm{\mathrm{M}}}
-\newcommand{\BN}{\bm{\mathrm{N}}}
-\newcommand{\BO}{\bm{\mathrm{O}}}
-\newcommand{\BP}{\bm{\mathrm{P}}}
-\newcommand{\BQ}{\bm{\mathrm{Q}}}
-\newcommand{\BR}{\bm{\mathrm{R}}}
-\newcommand{\BS}{\bm{\mathrm{S}}}
-\newcommand{\BT}{\bm{\mathrm{T}}}
-\newcommand{\BU}{\bm{\mathrm{U}}}
-\newcommand{\BV}{\bm{\mathrm{V}}}
-\newcommand{\BW}{\bm{\mathrm{W}}}
-\newcommand{\BX}{\bm{\mathrm{X}}}
-\newcommand{\BY}{\bm{\mathrm{Y}}}
-\newcommand{\BZ}{\bm{\mathrm{Z}}}
-\newcommand{\Ba}{\bm{\mathrm{a}}}
-\newcommand{\Bb}{\bm{\mathrm{b}}}
-\newcommand{\Bc}{\bm{\mathrm{c}}}
-\newcommand{\Bd}{\bm{\mathrm{d}}}
-\newcommand{\Be}{\bm{\mathrm{e}}}
-\newcommand{\Bf}{\bm{\mathrm{f}}}
-\newcommand{\Bg}{\bm{\mathrm{g}}}
-\newcommand{\Bh}{\bm{\mathrm{h}}}
-\newcommand{\Bi}{\bm{\mathrm{i}}}
-\newcommand{\Bj}{\bm{\mathrm{j}}}
-\newcommand{\Bk}{\bm{\mathrm{k}}}
-\newcommand{\Bl}{\bm{\mathrm{l}}}
-\newcommand{\Bm}{\bm{\mathrm{m}}}
-\newcommand{\Bn}{\bm{\mathrm{n}}}
-\newcommand{\Bo}{\bm{\mathrm{o}}}
-\newcommand{\Bp}{\bm{\mathrm{p}}}
-\newcommand{\Bq}{\bm{\mathrm{q}}}
-\newcommand{\Br}{\bm{\mathrm{r}}}
-\newcommand{\Bs}{\bm{\mathrm{s}}}
-\newcommand{\Bt}{\bm{\mathrm{t}}}
-\newcommand{\Bu}{\bm{\mathrm{u}}}
-\newcommand{\Bv}{\bm{\mathrm{v}}}
-\newcommand{\Bw}{\bm{\mathrm{w}}}
-\newcommand{\Bx}{\bm{\mathrm{x}}}
-\newcommand{\By}{\bm{\mathrm{y}}}
-\newcommand{\Bz}{\bm{\mathrm{z}}}
+\newcommand{\BA}{{\bm{\mathrm{A}}}}
+\newcommand{\BB}{{\bm{\mathrm{B}}}}
+\newcommand{\BC}{{\bm{\mathrm{C}}}}
+\newcommand{\BD}{{\bm{\mathrm{D}}}}
+\newcommand{\BE}{{\bm{\mathrm{E}}}}
+\newcommand{\BF}{{\bm{\mathrm{F}}}}
+\newcommand{\BG}{{\bm{\mathrm{G}}}}
+\newcommand{\BH}{{\bm{\mathrm{H}}}}
+\newcommand{\BI}{{\bm{\mathrm{I}}}}
+\newcommand{\BJ}{{\bm{\mathrm{J}}}}
+\newcommand{\BK}{{\bm{\mathrm{K}}}}
+\newcommand{\BL}{{\bm{\mathrm{L}}}}
+\newcommand{\BM}{{\bm{\mathrm{M}}}}
+\newcommand{\BN}{{\bm{\mathrm{N}}}}
+\newcommand{\BO}{{\bm{\mathrm{O}}}}
+\newcommand{\BP}{{\bm{\mathrm{P}}}}
+\newcommand{\BQ}{{\bm{\mathrm{Q}}}}
+\newcommand{\BR}{{\bm{\mathrm{R}}}}
+\newcommand{\BS}{{\bm{\mathrm{S}}}}
+\newcommand{\BT}{{\bm{\mathrm{T}}}}
+\newcommand{\BU}{{\bm{\mathrm{U}}}}
+\newcommand{\BV}{{\bm{\mathrm{V}}}}
+\newcommand{\BW}{{\bm{\mathrm{W}}}}
+\newcommand{\BX}{{\bm{\mathrm{X}}}}
+\newcommand{\BY}{{\bm{\mathrm{Y}}}}
+\newcommand{\BZ}{{\bm{\mathrm{Z}}}}
+\newcommand{\Ba}{{\bm{\mathrm{a}}}}
+\newcommand{\Bb}{{\bm{\mathrm{b}}}}
+\newcommand{\Bc}{{\bm{\mathrm{c}}}}
+\newcommand{\Bd}{{\bm{\mathrm{d}}}}
+\newcommand{\Be}{{\bm{\mathrm{e}}}}
+\newcommand{\Bf}{{\bm{\mathrm{f}}}}
+\newcommand{\Bg}{{\bm{\mathrm{g}}}}
+\newcommand{\Bh}{{\bm{\mathrm{h}}}}
+\newcommand{\Bi}{{\bm{\mathrm{i}}}}
+\newcommand{\Bj}{{\bm{\mathrm{j}}}}
+\newcommand{\Bk}{{\bm{\mathrm{k}}}}
+\newcommand{\Bl}{{\bm{\mathrm{l}}}}
+\newcommand{\Bm}{{\bm{\mathrm{m}}}}
+\newcommand{\Bn}{{\bm{\mathrm{n}}}}
+\newcommand{\Bo}{{\bm{\mathrm{o}}}}
+\newcommand{\Bp}{{\bm{\mathrm{p}}}}
+\newcommand{\Bq}{{\bm{\mathrm{q}}}}
+\newcommand{\Br}{{\bm{\mathrm{r}}}}
+\newcommand{\Bs}{{\bm{\mathrm{s}}}}
+\newcommand{\Bt}{{\bm{\mathrm{t}}}}
+\newcommand{\Bu}{{\bm{\mathrm{u}}}}
+\newcommand{\Bv}{{\bm{\mathrm{v}}}}
+\newcommand{\Bw}{{\bm{\mathrm{w}}}}
+\newcommand{\Bx}{{\bm{\mathrm{x}}}}
+\newcommand{\By}{{\bm{\mathrm{y}}}}
+\newcommand{\Bz}{{\bm{\mathrm{z}}}}
 
 % bold upright numbers
-\newcommand{\Bzero }{\bm{\mathrm{0}}}
-\newcommand{\Bone  }{\bm{\mathrm{1}}}
-\newcommand{\Btwo  }{\bm{\mathrm{2}}}
-\newcommand{\Bthree}{\bm{\mathrm{3}}}
-\newcommand{\Bfour }{\bm{\mathrm{4}}}
-\newcommand{\Bfive }{\bm{\mathrm{5}}}
-\newcommand{\Bsix  }{\bm{\mathrm{6}}}
-\newcommand{\Bseven}{\bm{\mathrm{7}}}
-\newcommand{\Beight}{\bm{\mathrm{8}}}
-\newcommand{\Bnine }{\bm{\mathrm{9}}}
+\newcommand{\Bzero }{{\bm{\mathrm{0}}}}
+\newcommand{\Bone  }{{\bm{\mathrm{1}}}}
+\newcommand{\Btwo  }{{\bm{\mathrm{2}}}}
+\newcommand{\Bthree}{{\bm{\mathrm{3}}}}
+\newcommand{\Bfour }{{\bm{\mathrm{4}}}}
+\newcommand{\Bfive }{{\bm{\mathrm{5}}}}
+\newcommand{\Bsix  }{{\bm{\mathrm{6}}}}
+\newcommand{\Bseven}{{\bm{\mathrm{7}}}}
+\newcommand{\Beight}{{\bm{\mathrm{8}}}}
+\newcommand{\Bnine }{{\bm{\mathrm{9}}}}
