--- a/shortsym_greek_bold.sty
+++ b/shortsym_greek_bold.sty
@@ -1,41 +1,41 @@
 % Bold Greek
-\newcommand{\Balpha  }{\bm{\alpha}        }
-\newcommand{\Bbeta   }{\bm{\beta}         }
-\newcommand{\Bgamma  }{\bm{\gamma}        }
-\newcommand{\Bdelta  }{\bm{\delta}        }
-\newcommand{\Bepsilon}{\bm{\epsilon}      }
-\newcommand{\Bvareps }{\bm{\varepsilon}   }
-\newcommand{\Bvarepsilon}{\bm{\varepsilon}}
-\newcommand{\Bzeta   }{\bm{\zeta}         }
-\newcommand{\Beta    }{\bm{\eta}          }
-\newcommand{\Btheta  }{\bm{\theta}        }
-\newcommand{\Bvarthe }{\bm{\vartheta}     }
-\newcommand{\Biota   }{\bm{\iota}         }
-\newcommand{\Bkappa  }{\bm{\kappa}        }
-\newcommand{\Blambda }{\bm{\lambda}       }
-\newcommand{\Bmu     }{\bm{\mu}           }
-\newcommand{\Bnu     }{\bm{\nu}           }
-\newcommand{\Bxi     }{\bm{\xi}           }
-\newcommand{\Bpi     }{\bm{\pi}           }
-\newcommand{\Brho    }{\bm{\rho}          }
-\newcommand{\Bvrho   }{\bm{\varrho}       }
-\newcommand{\Bsigma  }{\bm{\sigma}        }
-\newcommand{\Bvsigma }{\bm{\varsigma}     }
-\newcommand{\Btau    }{\bm{\tau}          }
-\newcommand{\Bupsilon}{\bm{\upsilon}      }
-\newcommand{\Bphi    }{\bm{\phi}          }
-\newcommand{\Bvarphi }{\bm{\varphi}       }
-\newcommand{\Bchi    }{\bm{\chi}          }
-\newcommand{\Bpsi    }{\bm{\psi}          }
-\newcommand{\Bomega  }{\bm{\omega}        }
-\newcommand{\BGamma  }{\bm{\Gamma}        }
-\newcommand{\BDelta  }{\bm{\Delta}        }
-\newcommand{\BTheta  }{\bm{\Theta}        }
-\newcommand{\BLambda }{\bm{\Lambda}       }
-\newcommand{\BXi     }{\bm{\Xi}           }
-\newcommand{\BPi     }{\bm{\Pi}           }
-\newcommand{\BSigma  }{\bm{\Sigma}        }
-\newcommand{\BUpsilon}{\bm{\Upsilon}      }
-\newcommand{\BPhi    }{\bm{\Phi}          }
-\newcommand{\BPsi    }{\bm{\Psi}          }
-\newcommand{\BOmega  }{\bm{\Omega}        }
+\newcommand{\Balpha  }{{\bm{\alpha}        }}
+\newcommand{\Bbeta   }{{\bm{\beta}         }}
+\newcommand{\Bgamma  }{{\bm{\gamma}        }}
+\newcommand{\Bdelta  }{{\bm{\delta}        }}
+\newcommand{\Bepsilon}{{\bm{\epsilon}      }}
+\newcommand{\Bvareps }{{\bm{\varepsilon}   }}
+\newcommand{\Bvarepsilon}{{\bm{\varepsilon}}}
+\newcommand{\Bzeta   }{{\bm{\zeta}         }}
+\newcommand{\Beta    }{{\bm{\eta}          }}
+\newcommand{\Btheta  }{{\bm{\theta}        }}
+\newcommand{\Bvarthe }{{\bm{\vartheta}     }}
+\newcommand{\Biota   }{{\bm{\iota}         }}
+\newcommand{\Bkappa  }{{\bm{\kappa}        }}
+\newcommand{\Blambda }{{\bm{\lambda}       }}
+\newcommand{\Bmu     }{{\bm{\mu}           }}
+\newcommand{\Bnu     }{{\bm{\nu}           }}
+\newcommand{\Bxi     }{{\bm{\xi}           }}
+\newcommand{\Bpi     }{{\bm{\pi}           }}
+\newcommand{\Brho    }{{\bm{\rho}          }}
+\newcommand{\Bvrho   }{{\bm{\varrho}       }}
+\newcommand{\Bsigma  }{{\bm{\sigma}        }}
+\newcommand{\Bvsigma }{{\bm{\varsigma}     }}
+\newcommand{\Btau    }{{\bm{\tau}          }}
+\newcommand{\Bupsilon}{{\bm{\upsilon}      }}
+\newcommand{\Bphi    }{{\bm{\phi}          }}
+\newcommand{\Bvarphi }{{\bm{\varphi}       }}
+\newcommand{\Bchi    }{{\bm{\chi}          }}
+\newcommand{\Bpsi    }{{\bm{\psi}          }}
+\newcommand{\Bomega  }{{\bm{\omega}        }}
+\newcommand{\BGamma  }{{\bm{\Gamma}        }}
+\newcommand{\BDelta  }{{\bm{\Delta}        }}
+\newcommand{\BTheta  }{{\bm{\Theta}        }}
+\newcommand{\BLambda }{{\bm{\Lambda}       }}
+\newcommand{\BXi     }{{\bm{\Xi}           }}
+\newcommand{\BPi     }{{\bm{\Pi}           }}
+\newcommand{\BSigma  }{{\bm{\Sigma}        }}
+\newcommand{\BUpsilon}{{\bm{\Upsilon}      }}
+\newcommand{\BPhi    }{{\bm{\Phi}          }}
+\newcommand{\BPsi    }{{\bm{\Psi}          }}
+\newcommand{\BOmega  }{{\bm{\Omega}        }}
