--- a/shortsym_sans_bold.sty
+++ b/shortsym_sans_bold.sty
@@ -1,67 +1,67 @@
 % Bold Sans-serif
 % \DeclareMathAlphabet{\mathbfsf}{\encodingdefault}{\sfdefault}{bx}{n}
 
-\newcommand{\BFA}{\bm{\mathsf{A}}}
-\newcommand{\BFB}{\bm{\mathsf{B}}}
-\newcommand{\BFC}{\bm{\mathsf{C}}}
-\newcommand{\BFD}{\bm{\mathsf{D}}}
-\newcommand{\BFE}{\bm{\mathsf{E}}}
-\newcommand{\BFF}{\bm{\mathsf{F}}}
-\newcommand{\BFG}{\bm{\mathsf{G}}}
-\newcommand{\BFH}{\bm{\mathsf{H}}}
-\newcommand{\BFI}{\bm{\mathsf{I}}}
-\newcommand{\BFJ}{\bm{\mathsf{J}}}
-\newcommand{\BFK}{\bm{\mathsf{K}}}
-\newcommand{\BFL}{\bm{\mathsf{L}}}
-\newcommand{\BFM}{\bm{\mathsf{M}}}
-\newcommand{\BFN}{\bm{\mathsf{N}}}
-\newcommand{\BFO}{\bm{\mathsf{O}}}
-\newcommand{\BFP}{\bm{\mathsf{P}}}
-\newcommand{\BFQ}{\bm{\mathsf{Q}}}
-\newcommand{\BFR}{\bm{\mathsf{R}}}
-\newcommand{\BFS}{\bm{\mathsf{S}}}
-\newcommand{\BFT}{\bm{\mathsf{T}}}
-\newcommand{\BFU}{\bm{\mathsf{U}}}
-\newcommand{\BFV}{\bm{\mathsf{V}}}
-\newcommand{\BFW}{\bm{\mathsf{W}}}
-\newcommand{\BFX}{\bm{\mathsf{X}}}
-\newcommand{\BFY}{\bm{\mathsf{Y}}}
-\newcommand{\BFZ}{\bm{\mathsf{Z}}}
-\newcommand{\BFa}{\bm{\mathsf{a}}}
-\newcommand{\BFb}{\bm{\mathsf{b}}}
-\newcommand{\BFc}{\bm{\mathsf{c}}}
-\newcommand{\BFd}{\bm{\mathsf{d}}}
-\newcommand{\BFe}{\bm{\mathsf{e}}}
-\newcommand{\BFf}{\bm{\mathsf{f}}}
-\newcommand{\BFg}{\bm{\mathsf{g}}}
-\newcommand{\BFh}{\bm{\mathsf{h}}}
-\newcommand{\BFi}{\bm{\mathsf{i}}}
-\newcommand{\BFj}{\bm{\mathsf{j}}}
-\newcommand{\BFk}{\bm{\mathsf{k}}}
-\newcommand{\BFl}{\bm{\mathsf{l}}}
-\newcommand{\BFm}{\bm{\mathsf{m}}}
-\newcommand{\BFn}{\bm{\mathsf{n}}}
-\newcommand{\BFo}{\bm{\mathsf{o}}}
-\newcommand{\BFp}{\bm{\mathsf{p}}}
-\newcommand{\BFq}{\bm{\mathsf{q}}}
-\newcommand{\BFr}{\bm{\mathsf{r}}}
-\newcommand{\BFs}{\bm{\mathsf{s}}}
-\newcommand{\BFt}{\bm{\mathsf{t}}}
-\newcommand{\BFu}{\bm{\mathsf{u}}}
-\newcommand{\BFv}{\bm{\mathsf{v}}}
-\newcommand{\BFw}{\bm{\mathsf{w}}}
-\newcommand{\BFx}{\bm{\mathsf{x}}}
-\newcommand{\BFy}{\bm{\mathsf{y}}}
-\newcommand{\BFz}{\bm{\mathsf{z}}}
+\newcommand{\BFA}{{\bm{\mathsf{A}}}}
+\newcommand{\BFB}{{\bm{\mathsf{B}}}}
+\newcommand{\BFC}{{\bm{\mathsf{C}}}}
+\newcommand{\BFD}{{\bm{\mathsf{D}}}}
+\newcommand{\BFE}{{\bm{\mathsf{E}}}}
+\newcommand{\BFF}{{\bm{\mathsf{F}}}}
+\newcommand{\BFG}{{\bm{\mathsf{G}}}}
+\newcommand{\BFH}{{\bm{\mathsf{H}}}}
+\newcommand{\BFI}{{\bm{\mathsf{I}}}}
+\newcommand{\BFJ}{{\bm{\mathsf{J}}}}
+\newcommand{\BFK}{{\bm{\mathsf{K}}}}
+\newcommand{\BFL}{{\bm{\mathsf{L}}}}
+\newcommand{\BFM}{{\bm{\mathsf{M}}}}
+\newcommand{\BFN}{{\bm{\mathsf{N}}}}
+\newcommand{\BFO}{{\bm{\mathsf{O}}}}
+\newcommand{\BFP}{{\bm{\mathsf{P}}}}
+\newcommand{\BFQ}{{\bm{\mathsf{Q}}}}
+\newcommand{\BFR}{{\bm{\mathsf{R}}}}
+\newcommand{\BFS}{{\bm{\mathsf{S}}}}
+\newcommand{\BFT}{{\bm{\mathsf{T}}}}
+\newcommand{\BFU}{{\bm{\mathsf{U}}}}
+\newcommand{\BFV}{{\bm{\mathsf{V}}}}
+\newcommand{\BFW}{{\bm{\mathsf{W}}}}
+\newcommand{\BFX}{{\bm{\mathsf{X}}}}
+\newcommand{\BFY}{{\bm{\mathsf{Y}}}}
+\newcommand{\BFZ}{{\bm{\mathsf{Z}}}}
+\newcommand{\BFa}{{\bm{\mathsf{a}}}}
+\newcommand{\BFb}{{\bm{\mathsf{b}}}}
+\newcommand{\BFc}{{\bm{\mathsf{c}}}}
+\newcommand{\BFd}{{\bm{\mathsf{d}}}}
+\newcommand{\BFe}{{\bm{\mathsf{e}}}}
+\newcommand{\BFf}{{\bm{\mathsf{f}}}}
+\newcommand{\BFg}{{\bm{\mathsf{g}}}}
+\newcommand{\BFh}{{\bm{\mathsf{h}}}}
+\newcommand{\BFi}{{\bm{\mathsf{i}}}}
+\newcommand{\BFj}{{\bm{\mathsf{j}}}}
+\newcommand{\BFk}{{\bm{\mathsf{k}}}}
+\newcommand{\BFl}{{\bm{\mathsf{l}}}}
+\newcommand{\BFm}{{\bm{\mathsf{m}}}}
+\newcommand{\BFn}{{\bm{\mathsf{n}}}}
+\newcommand{\BFo}{{\bm{\mathsf{o}}}}
+\newcommand{\BFp}{{\bm{\mathsf{p}}}}
+\newcommand{\BFq}{{\bm{\mathsf{q}}}}
+\newcommand{\BFr}{{\bm{\mathsf{r}}}}
+\newcommand{\BFs}{{\bm{\mathsf{s}}}}
+\newcommand{\BFt}{{\bm{\mathsf{t}}}}
+\newcommand{\BFu}{{\bm{\mathsf{u}}}}
+\newcommand{\BFv}{{\bm{\mathsf{v}}}}
+\newcommand{\BFw}{{\bm{\mathsf{w}}}}
+\newcommand{\BFx}{{\bm{\mathsf{x}}}}
+\newcommand{\BFy}{{\bm{\mathsf{y}}}}
+\newcommand{\BFz}{{\bm{\mathsf{z}}}}
 
-\newcommand{\BFzero }{\bm{\mathsf{0}}}
-\newcommand{\BFone  }{\bm{\mathsf{1}}}
-\newcommand{\BFtwo  }{\bm{\mathsf{2}}}
-\newcommand{\BFthree}{\bm{\mathsf{3}}}
-\newcommand{\BFfour }{\bm{\mathsf{4}}}
-\newcommand{\BFfive }{\bm{\mathsf{5}}}
-\newcommand{\BFsix  }{\bm{\mathsf{6}}}
-\newcommand{\BFseven}{\bm{\mathsf{7}}}
-\newcommand{\BFeight}{\bm{\mathsf{8}}}
-\newcommand{\BFnine }{\bm{\mathsf{9}}}
+\newcommand{\BFzero }{{\bm{\mathsf{0}}}}
+\newcommand{\BFone  }{{\bm{\mathsf{1}}}}
+\newcommand{\BFtwo  }{{\bm{\mathsf{2}}}}
+\newcommand{\BFthree}{{\bm{\mathsf{3}}}}
+\newcommand{\BFfour }{{\bm{\mathsf{4}}}}
+\newcommand{\BFfive }{{\bm{\mathsf{5}}}}
+\newcommand{\BFsix  }{{\bm{\mathsf{6}}}}
+\newcommand{\BFseven}{{\bm{\mathsf{7}}}}
+\newcommand{\BFeight}{{\bm{\mathsf{8}}}}
+\newcommand{\BFnine }{{\bm{\mathsf{9}}}}
 
