--- a/shortsym_cal_bold.sty
+++ b/shortsym_cal_bold.sty
@@ -1,27 +1,27 @@
 % Calligraphic bold
-\newcommand{\BCA}{\bm{\mathcal{A}}}
-\newcommand{\BCB}{\bm{\mathcal{B}}}
-\newcommand{\BCC}{\bm{\mathcal{C}}}
-\newcommand{\BCD}{\bm{\mathcal{D}}}
-\newcommand{\BCE}{\bm{\mathcal{E}}}
-\newcommand{\BCF}{\bm{\mathcal{F}}}
-\newcommand{\BCG}{\bm{\mathcal{G}}}
-\newcommand{\BCH}{\bm{\mathcal{H}}}
-\newcommand{\BCI}{\bm{\mathcal{I}}}
-\newcommand{\BCJ}{\bm{\mathcal{J}}}
-\newcommand{\BCK}{\bm{\mathcal{K}}}
-\newcommand{\BCL}{\bm{\mathcal{L}}}
-\newcommand{\BCM}{\bm{\mathcal{M}}}
-\newcommand{\BCN}{\bm{\mathcal{N}}}
-\newcommand{\BCO}{\bm{\mathcal{O}}}
-\newcommand{\BCP}{\bm{\mathcal{P}}}
-\newcommand{\BCQ}{\bm{\mathcal{Q}}}
-\newcommand{\BCR}{\bm{\mathcal{R}}}
-\newcommand{\BCS}{\bm{\mathcal{S}}}
-\newcommand{\BCT}{\bm{\mathcal{T}}}
-\newcommand{\BCU}{\bm{\mathcal{U}}}
-\newcommand{\BCV}{\bm{\mathcal{V}}}
-\newcommand{\BCW}{\bm{\mathcal{W}}}
-\newcommand{\BCX}{\bm{\mathcal{X}}}
-\newcommand{\BCY}{\bm{\mathcal{Y}}}
-\newcommand{\BCZ}{\bm{\mathcal{Z}}}
+\newcommand{\BCA}{{\bm{\mathcal{A}}}}
+\newcommand{\BCB}{{\bm{\mathcal{B}}}}
+\newcommand{\BCC}{{\bm{\mathcal{C}}}}
+\newcommand{\BCD}{{\bm{\mathcal{D}}}}
+\newcommand{\BCE}{{\bm{\mathcal{E}}}}
+\newcommand{\BCF}{{\bm{\mathcal{F}}}}
+\newcommand{\BCG}{{\bm{\mathcal{G}}}}
+\newcommand{\BCH}{{\bm{\mathcal{H}}}}
+\newcommand{\BCI}{{\bm{\mathcal{I}}}}
+\newcommand{\BCJ}{{\bm{\mathcal{J}}}}
+\newcommand{\BCK}{{\bm{\mathcal{K}}}}
+\newcommand{\BCL}{{\bm{\mathcal{L}}}}
+\newcommand{\BCM}{{\bm{\mathcal{M}}}}
+\newcommand{\BCN}{{\bm{\mathcal{N}}}}
+\newcommand{\BCO}{{\bm{\mathcal{O}}}}
+\newcommand{\BCP}{{\bm{\mathcal{P}}}}
+\newcommand{\BCQ}{{\bm{\mathcal{Q}}}}
+\newcommand{\BCR}{{\bm{\mathcal{R}}}}
+\newcommand{\BCS}{{\bm{\mathcal{S}}}}
+\newcommand{\BCT}{{\bm{\mathcal{T}}}}
+\newcommand{\BCU}{{\bm{\mathcal{U}}}}
+\newcommand{\BCV}{{\bm{\mathcal{V}}}}
+\newcommand{\BCW}{{\bm{\mathcal{W}}}}
+\newcommand{\BCX}{{\bm{\mathcal{X}}}}
+\newcommand{\BCY}{{\bm{\mathcal{Y}}}}
+\newcommand{\BCZ}{{\bm{\mathcal{Z}}}}
