--- a/shortsym_upright_bold.sty
+++ b/shortsym_upright_bold.sty
@@ -1,65 +1,65 @@
 % Upright bold letters
-\newcommand{\VA}{\bm{\mathrm{A}}}
-\newcommand{\VB}{\bm{\mathrm{B}}}
-\newcommand{\VC}{\bm{\mathrm{C}}}
-\newcommand{\VD}{\bm{\mathrm{D}}}
-\newcommand{\VE}{\bm{\mathrm{E}}}
-\newcommand{\VF}{\bm{\mathrm{F}}}
-\newcommand{\VG}{\bm{\mathrm{G}}}
-\newcommand{\VH}{\bm{\mathrm{H}}}
-\newcommand{\VI}{\bm{\mathrm{I}}}
-\newcommand{\VJ}{\bm{\mathrm{J}}}
-\newcommand{\VK}{\bm{\mathrm{K}}}
-\newcommand{\VL}{\bm{\mathrm{L}}}
-\newcommand{\VM}{\bm{\mathrm{M}}}
-\newcommand{\VN}{\bm{\mathrm{N}}}
-\newcommand{\VO}{\bm{\mathrm{O}}}
-\newcommand{\VP}{\bm{\mathrm{P}}}
-\newcommand{\VQ}{\bm{\mathrm{Q}}}
-\newcommand{\VR}{\bm{\mathrm{R}}}
-\newcommand{\VS}{\bm{\mathrm{S}}}
-\newcommand{\VT}{\bm{\mathrm{T}}}
-\newcommand{\VU}{\bm{\mathrm{U}}}
-\newcommand{\VV}{\bm{\mathrm{V}}}
-\newcommand{\VW}{\bm{\mathrm{W}}}
-\newcommand{\VX}{\bm{\mathrm{X}}}
-\newcommand{\VY}{\bm{\mathrm{Y}}}
-\newcommand{\VZ}{\bm{\mathrm{Z}}}
-\newcommand{\Va}{\bm{\mathrm{a}}}
-\newcommand{\Vb}{\bm{\mathrm{b}}}
-\newcommand{\Vc}{\bm{\mathrm{c}}}
-\newcommand{\Vd}{\bm{\mathrm{d}}}
-\newcommand{\Ve}{\bm{\mathrm{e}}}
-\newcommand{\Vf}{\bm{\mathrm{f}}}
-\newcommand{\Vg}{\bm{\mathrm{g}}}
-\newcommand{\Vh}{\bm{\mathrm{h}}}
-\newcommand{\Vi}{\bm{\mathrm{i}}}
-\newcommand{\Vj}{\bm{\mathrm{j}}}
-\newcommand{\Vk}{\bm{\mathrm{k}}}
-\newcommand{\Vl}{\bm{\mathrm{l}}}
-\newcommand{\Vm}{\bm{\mathrm{m}}}
-\newcommand{\Vn}{\bm{\mathrm{n}}}
-\newcommand{\Vo}{\bm{\mathrm{o}}}
-\newcommand{\Vp}{\bm{\mathrm{p}}}
-\newcommand{\Vq}{\bm{\mathrm{q}}}
-\newcommand{\Vr}{\bm{\mathrm{r}}}
-\newcommand{\Vs}{\bm{\mathrm{s}}}
-\newcommand{\Vt}{\bm{\mathrm{t}}}
-\newcommand{\Vu}{\bm{\mathrm{u}}}
-\newcommand{\Vv}{\bm{\mathrm{v}}}
-\newcommand{\Vw}{\bm{\mathrm{w}}}
-\newcommand{\Vx}{\bm{\mathrm{x}}}
-\newcommand{\Vy}{\bm{\mathrm{y}}}
-\newcommand{\Vz}{\bm{\mathrm{z}}}
+\newcommand{\VA}{{\bm{\mathrm{A}}}}
+\newcommand{\VB}{{\bm{\mathrm{B}}}}
+\newcommand{\VC}{{\bm{\mathrm{C}}}}
+\newcommand{\VD}{{\bm{\mathrm{D}}}}
+\newcommand{\VE}{{\bm{\mathrm{E}}}}
+\newcommand{\VF}{{\bm{\mathrm{F}}}}
+\newcommand{\VG}{{\bm{\mathrm{G}}}}
+\newcommand{\VH}{{\bm{\mathrm{H}}}}
+\newcommand{\VI}{{\bm{\mathrm{I}}}}
+\newcommand{\VJ}{{\bm{\mathrm{J}}}}
+\newcommand{\VK}{{\bm{\mathrm{K}}}}
+\newcommand{\VL}{{\bm{\mathrm{L}}}}
+\newcommand{\VM}{{\bm{\mathrm{M}}}}
+\newcommand{\VN}{{\bm{\mathrm{N}}}}
+\newcommand{\VO}{{\bm{\mathrm{O}}}}
+\newcommand{\VP}{{\bm{\mathrm{P}}}}
+\newcommand{\VQ}{{\bm{\mathrm{Q}}}}
+\newcommand{\VR}{{\bm{\mathrm{R}}}}
+\newcommand{\VS}{{\bm{\mathrm{S}}}}
+\newcommand{\VT}{{\bm{\mathrm{T}}}}
+\newcommand{\VU}{{\bm{\mathrm{U}}}}
+\newcommand{\VV}{{\bm{\mathrm{V}}}}
+\newcommand{\VW}{{\bm{\mathrm{W}}}}
+\newcommand{\VX}{{\bm{\mathrm{X}}}}
+\newcommand{\VY}{{\bm{\mathrm{Y}}}}
+\newcommand{\VZ}{{\bm{\mathrm{Z}}}}
+\newcommand{\Va}{{\bm{\mathrm{a}}}}
+\newcommand{\Vb}{{\bm{\mathrm{b}}}}
+\newcommand{\Vc}{{\bm{\mathrm{c}}}}
+\newcommand{\Vd}{{\bm{\mathrm{d}}}}
+\newcommand{\Ve}{{\bm{\mathrm{e}}}}
+\newcommand{\Vf}{{\bm{\mathrm{f}}}}
+\newcommand{\Vg}{{\bm{\mathrm{g}}}}
+\newcommand{\Vh}{{\bm{\mathrm{h}}}}
+\newcommand{\Vi}{{\bm{\mathrm{i}}}}
+\newcommand{\Vj}{{\bm{\mathrm{j}}}}
+\newcommand{\Vk}{{\bm{\mathrm{k}}}}
+\newcommand{\Vl}{{\bm{\mathrm{l}}}}
+\newcommand{\Vm}{{\bm{\mathrm{m}}}}
+\newcommand{\Vn}{{\bm{\mathrm{n}}}}
+\newcommand{\Vo}{{\bm{\mathrm{o}}}}
+\newcommand{\Vp}{{\bm{\mathrm{p}}}}
+\newcommand{\Vq}{{\bm{\mathrm{q}}}}
+\newcommand{\Vr}{{\bm{\mathrm{r}}}}
+\newcommand{\Vs}{{\bm{\mathrm{s}}}}
+\newcommand{\Vt}{{\bm{\mathrm{t}}}}
+\newcommand{\Vu}{{\bm{\mathrm{u}}}}
+\newcommand{\Vv}{{\bm{\mathrm{v}}}}
+\newcommand{\Vw}{{\bm{\mathrm{w}}}}
+\newcommand{\Vx}{{\bm{\mathrm{x}}}}
+\newcommand{\Vy}{{\bm{\mathrm{y}}}}
+\newcommand{\Vz}{{\bm{\mathrm{z}}}}
 
 % bold upright numbers
-\newcommand{\Vzero }{\bm{\mathrm{0}}}
-\newcommand{\Vone  }{\bm{\mathrm{1}}}
-\newcommand{\Vtwo  }{\bm{\mathrm{2}}}
-\newcommand{\Vthree}{\bm{\mathrm{3}}}
-\newcommand{\Vfour }{\bm{\mathrm{4}}}
-\newcommand{\Vfive }{\bm{\mathrm{5}}}
-\newcommand{\Vsix  }{\bm{\mathrm{6}}}
-\newcommand{\Vseven}{\bm{\mathrm{7}}}
-\newcommand{\Veight}{\bm{\mathrm{8}}}
-\newcommand{\Vnine }{\bm{\mathrm{9}}}
+\newcommand{\Vzero }{{\bm{\mathrm{0}}}}
+\newcommand{\Vone  }{{\bm{\mathrm{1}}}}
+\newcommand{\Vtwo  }{{\bm{\mathrm{2}}}}
+\newcommand{\Vthree}{{\bm{\mathrm{3}}}}
+\newcommand{\Vfour }{{\bm{\mathrm{4}}}}
+\newcommand{\Vfive }{{\bm{\mathrm{5}}}}
+\newcommand{\Vsix  }{{\bm{\mathrm{6}}}}
+\newcommand{\Vseven}{{\bm{\mathrm{7}}}}
+\newcommand{\Veight}{{\bm{\mathrm{8}}}}
+\newcommand{\Vnine }{{\bm{\mathrm{9}}}}
