--- a/shortsym_bold.sty
+++ b/shortsym_bold.sty
@@ -1,65 +1,65 @@
 % Upright bold letters
-\newcommand{\BA}{{\bm{\mathrm{A}}}}
-\newcommand{\BB}{{\bm{\mathrm{B}}}}
-\newcommand{\BC}{{\bm{\mathrm{C}}}}
-\newcommand{\BD}{{\bm{\mathrm{D}}}}
-\newcommand{\BE}{{\bm{\mathrm{E}}}}
-\newcommand{\BF}{{\bm{\mathrm{F}}}}
-\newcommand{\BG}{{\bm{\mathrm{G}}}}
-\newcommand{\BH}{{\bm{\mathrm{H}}}}
-\newcommand{\BI}{{\bm{\mathrm{I}}}}
-\newcommand{\BJ}{{\bm{\mathrm{J}}}}
-\newcommand{\BK}{{\bm{\mathrm{K}}}}
-\newcommand{\BL}{{\bm{\mathrm{L}}}}
-\newcommand{\BM}{{\bm{\mathrm{M}}}}
-\newcommand{\BN}{{\bm{\mathrm{N}}}}
-\newcommand{\BO}{{\bm{\mathrm{O}}}}
-\newcommand{\BP}{{\bm{\mathrm{P}}}}
-\newcommand{\BQ}{{\bm{\mathrm{Q}}}}
-\newcommand{\BR}{{\bm{\mathrm{R}}}}
-\newcommand{\BS}{{\bm{\mathrm{S}}}}
-\newcommand{\BT}{{\bm{\mathrm{T}}}}
-\newcommand{\BU}{{\bm{\mathrm{U}}}}
-\newcommand{\BV}{{\bm{\mathrm{V}}}}
-\newcommand{\BW}{{\bm{\mathrm{W}}}}
-\newcommand{\BX}{{\bm{\mathrm{X}}}}
-\newcommand{\BY}{{\bm{\mathrm{Y}}}}
-\newcommand{\BZ}{{\bm{\mathrm{Z}}}}
-\newcommand{\Ba}{{\bm{\mathrm{a}}}}
-\newcommand{\Bb}{{\bm{\mathrm{b}}}}
-\newcommand{\Bc}{{\bm{\mathrm{c}}}}
-\newcommand{\Bd}{{\bm{\mathrm{d}}}}
-\newcommand{\Be}{{\bm{\mathrm{e}}}}
-\newcommand{\Bf}{{\bm{\mathrm{f}}}}
-\newcommand{\Bg}{{\bm{\mathrm{g}}}}
-\newcommand{\Bh}{{\bm{\mathrm{h}}}}
-\newcommand{\Bi}{{\bm{\mathrm{i}}}}
-\newcommand{\Bj}{{\bm{\mathrm{j}}}}
-\newcommand{\Bk}{{\bm{\mathrm{k}}}}
-\newcommand{\Bl}{{\bm{\mathrm{l}}}}
-\newcommand{\Bm}{{\bm{\mathrm{m}}}}
-\newcommand{\Bn}{{\bm{\mathrm{n}}}}
-\newcommand{\Bo}{{\bm{\mathrm{o}}}}
-\newcommand{\Bp}{{\bm{\mathrm{p}}}}
-\newcommand{\Bq}{{\bm{\mathrm{q}}}}
-\newcommand{\Br}{{\bm{\mathrm{r}}}}
-\newcommand{\Bs}{{\bm{\mathrm{s}}}}
-\newcommand{\Bt}{{\bm{\mathrm{t}}}}
-\newcommand{\Bu}{{\bm{\mathrm{u}}}}
-\newcommand{\Bv}{{\bm{\mathrm{v}}}}
-\newcommand{\Bw}{{\bm{\mathrm{w}}}}
-\newcommand{\Bx}{{\bm{\mathrm{x}}}}
-\newcommand{\By}{{\bm{\mathrm{y}}}}
-\newcommand{\Bz}{{\bm{\mathrm{z}}}}
+\newcommand{\BA}{{\bm{\mathnormal{A}}}}
+\newcommand{\BB}{{\bm{\mathnormal{B}}}}
+\newcommand{\BC}{{\bm{\mathnormal{C}}}}
+\newcommand{\BD}{{\bm{\mathnormal{D}}}}
+\newcommand{\BE}{{\bm{\mathnormal{E}}}}
+\newcommand{\BF}{{\bm{\mathnormal{F}}}}
+\newcommand{\BG}{{\bm{\mathnormal{G}}}}
+\newcommand{\BH}{{\bm{\mathnormal{H}}}}
+\newcommand{\BI}{{\bm{\mathnormal{I}}}}
+\newcommand{\BJ}{{\bm{\mathnormal{J}}}}
+\newcommand{\BK}{{\bm{\mathnormal{K}}}}
+\newcommand{\BL}{{\bm{\mathnormal{L}}}}
+\newcommand{\BM}{{\bm{\mathnormal{M}}}}
+\newcommand{\BN}{{\bm{\mathnormal{N}}}}
+\newcommand{\BO}{{\bm{\mathnormal{O}}}}
+\newcommand{\BP}{{\bm{\mathnormal{P}}}}
+\newcommand{\BQ}{{\bm{\mathnormal{Q}}}}
+\newcommand{\BR}{{\bm{\mathnormal{R}}}}
+\newcommand{\BS}{{\bm{\mathnormal{S}}}}
+\newcommand{\BT}{{\bm{\mathnormal{T}}}}
+\newcommand{\BU}{{\bm{\mathnormal{U}}}}
+\newcommand{\BV}{{\bm{\mathnormal{V}}}}
+\newcommand{\BW}{{\bm{\mathnormal{W}}}}
+\newcommand{\BX}{{\bm{\mathnormal{X}}}}
+\newcommand{\BY}{{\bm{\mathnormal{Y}}}}
+\newcommand{\BZ}{{\bm{\mathnormal{Z}}}}
+\newcommand{\Ba}{{\bm{\mathnormal{a}}}}
+\newcommand{\Bb}{{\bm{\mathnormal{b}}}}
+\newcommand{\Bc}{{\bm{\mathnormal{c}}}}
+\newcommand{\Bd}{{\bm{\mathnormal{d}}}}
+\newcommand{\Be}{{\bm{\mathnormal{e}}}}
+\newcommand{\Bf}{{\bm{\mathnormal{f}}}}
+\newcommand{\Bg}{{\bm{\mathnormal{g}}}}
+\newcommand{\Bh}{{\bm{\mathnormal{h}}}}
+\newcommand{\Bi}{{\bm{\mathnormal{i}}}}
+\newcommand{\Bj}{{\bm{\mathnormal{j}}}}
+\newcommand{\Bk}{{\bm{\mathnormal{k}}}}
+\newcommand{\Bl}{{\bm{\mathnormal{l}}}}
+\newcommand{\Bm}{{\bm{\mathnormal{m}}}}
+\newcommand{\Bn}{{\bm{\mathnormal{n}}}}
+\newcommand{\Bo}{{\bm{\mathnormal{o}}}}
+\newcommand{\Bp}{{\bm{\mathnormal{p}}}}
+\newcommand{\Bq}{{\bm{\mathnormal{q}}}}
+\newcommand{\Br}{{\bm{\mathnormal{r}}}}
+\newcommand{\Bs}{{\bm{\mathnormal{s}}}}
+\newcommand{\Bt}{{\bm{\mathnormal{t}}}}
+\newcommand{\Bu}{{\bm{\mathnormal{u}}}}
+\newcommand{\Bv}{{\bm{\mathnormal{v}}}}
+\newcommand{\Bw}{{\bm{\mathnormal{w}}}}
+\newcommand{\Bx}{{\bm{\mathnormal{x}}}}
+\newcommand{\By}{{\bm{\mathnormal{y}}}}
+\newcommand{\Bz}{{\bm{\mathnormal{z}}}}
 
 % bold upright numbers
-\newcommand{\Bzero }{{\bm{\mathrm{0}}}}
-\newcommand{\Bone  }{{\bm{\mathrm{1}}}}
-\newcommand{\Btwo  }{{\bm{\mathrm{2}}}}
-\newcommand{\Bthree}{{\bm{\mathrm{3}}}}
-\newcommand{\Bfour }{{\bm{\mathrm{4}}}}
-\newcommand{\Bfive }{{\bm{\mathrm{5}}}}
-\newcommand{\Bsix  }{{\bm{\mathrm{6}}}}
-\newcommand{\Bseven}{{\bm{\mathrm{7}}}}
-\newcommand{\Beight}{{\bm{\mathrm{8}}}}
-\newcommand{\Bnine }{{\bm{\mathrm{9}}}}
+\newcommand{\Bzero }{{\bm{\mathit{0}}}}
+\newcommand{\Bone  }{{\bm{\mathit{1}}}}
+\newcommand{\Btwo  }{{\bm{\mathit{2}}}}
+\newcommand{\Bthree}{{\bm{\mathit{3}}}}
+\newcommand{\Bfour }{{\bm{\mathit{4}}}}
+\newcommand{\Bfive }{{\bm{\mathit{5}}}}
+\newcommand{\Bsix  }{{\bm{\mathit{6}}}}
+\newcommand{\Bseven}{{\bm{\mathit{7}}}}
+\newcommand{\Beight}{{\bm{\mathit{8}}}}
+\newcommand{\Bnine }{{\bm{\mathit{9}}}}
